- added auto title create file - fixed: options for download - fixed: word wrap for display files

--- a/salz_cloud.css
+++ b/salz_cloud.css
@@ -300,6 +300,7 @@ html.details-visible #overlay {
     right: 0;
     margin: 5px;
     overflow: hidden;
+    word-wrap: break-word;
 }
 #files > div.folder > span {
     top: 0;
